--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "display": "fullscreen",
   "orientation": "portrait",
   "Scope": "/",
-  "start_url": "https://compliancerbr.herokuapp.com/",
+  "start_url": "/",
   "icons": [
     {
       "src": "images/icons/icon-72x72.png",
